added basic register user api, wihtout validaiton of exisitng user
